test/resources/valid/ValidMissingSemicolon.flo
action TOGGLE_LOGIN_MODAL = toggle();
action TOGGLE_SIGNUP_MODAL = toggle();
action TOGGLE_PURCHASE_MODAL = toggle()

flow MODALS = {
    boolean isLoginModalOpen = false;
    boolean isSignupModalOpen = false;
    boolean isPurchaseModalOpen = false
    TOGGLE_LOGIN_MODAL >> isLoginModalOpen;
    TOGGLE_SIGNUP_MODAL >> isSignupModalOpen;
    TOGGLE_PURCHASE_MODAL >> isPurchaseModalOpen
}