test/resources/invalid/typecheck/InvalidToggleNonBoolean.flo
action TOGGLE_LOGIN_MODAL = toggle();

flow MODALS = {
    number someNumber = 2;
    TOGGLE_LOGIN_MODAL >> someNumber;
}